--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    margin: 0px;
+    background-color: beige
+}
+
+select{
+    height: 30px;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+}
